--- a/index.html
+++ b/index.html
@@ -205,7 +205,7 @@
             </div>
             <div class="middle-right">
                 <h2>学歴</h2>
-                <p><strong>2017年</strong>に高校を卒業し、大学を決める前に自分の興味に適するもの習うためざまざまな授業に通いました。大学を決時を時も自分の見につけることのない東洋学を副専攻、英語を専門的に学びました。</p>
+                <p><strong>2017年</strong>に高校を卒業し、大学を決める前に自分の興味に適するもの習うためざまざまな授業に通いました。大学を決める時も自分の見につけることのない東洋学を副専攻、英語を専門的に学びました。</p>
             </div>
             <div class="under-right">
                 <p><Strong>名前&nbsp;-&nbsp;ティンミンテット</Strong></p>
