--- a/resume.html
+++ b/resume.html
@@ -17,7 +17,7 @@
             display: flex;
             justify-content: center;
             align-items: center;
-            height: 100vh;
+            height: 100%;
             background-color: #f4f4f4;
         }
 
